public interface ICartPromotion {
    void apply(Cart cart);
}
